# hip-caldav-view

./: Cargo.toml  README.md  index.html
src/: caldav.rs  lib.rs  main.rs  parser.rs
