[package]
name = "caldav_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4.33"
chrono = "0.4"
ical = "0.7.0"
log = "0.4.6"
wasm-logger = "0.2.0"
chrono-tz = "0.7.0"
wasm-bindgen = "0.2"
js-sys = "0.3.60"